--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "CPANPLUS-Dist-Build-0.56.tar.gz": d3821707e4643fea5ab48e42897753764681755f
+  CPANPLUS-Dist-Build-0.68.tar.gz: 02bac555d037801a16fe142e8d50c1b053f28b5e
